[build-system]
requires = [
    "phosphorus>=0.3",
]
build-backend = "phosphorus.construction.api"

[project]
name = "pvenv"
dynamic = [
    "version",
]

authors = [
    { name = "Stephanos Kuma", email = "stephanos@kuma.ai" },
]
license = { text = "BSD-3-Clause" }

readme = "docs/README.md"
description = "Easy python virtual environment management"
keywords = [
    "venv",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
]

requires-python = "~=3.11"
dependencies = [
    "dj_settings~=5.0",
]

[project.urls]
homepage = "https://p-venv.readthedocs.io/en/stable/"
repository = "https://github.com/spapanik/pvenv"
documentation = "https://p-venv.readthedocs.io/en/stable/"

[project.scripts]
pvenv = "pvenv.__main__:main"

[tool.phosphorus.dev-dependencies]
dev = [
    "ipdb~=0.13",
    "ipython~=8.21",
]
lint = [
    "black~=24.1",
    "mypy~=1.8",
    "ruff~=0.5",
    "types-pyyaml~=6.0",
]
test = [
    "pytest~=8.0",
    "pytest-cov~=5.0",
]
docs = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.5",
    "mkdocs-material-extensions~=1.3",
    "Pygments~=2.17",
    "pymdown-extensions~=10.8",
]

[tool.phosphorus.dynamic]
version = { file = "src/pvenv/__version__.py" }

[tool.black]
target-version = [
    "py39",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
src = [
    "src",
]
target-version = "py39"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FLY",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PGH",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "COM812",
    "E501",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "FBT001",
    "PT011",
    "S101",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.ruff.lint.isort]
combine-as-imports = true
forced-separate = [
    "tests",
]
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = "tests"

[tool.coverage.run]
source = [
    "src/",
]
data_file = ".cov_cache/coverage.dat"

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
